Implement deletion of deliveries.
