# api/api.pb.go
@@ -14,6 +14,8 @@ It has these top-level messages:
 	FetchAllResponse
 	RecordDeliveryRequest
 	RecordDeliveryResponse
+	ClearDeliveryRequest
+	ClearDeliveryResponse
 */
 package api
 
@@ -144,6 +146,31 @@ func (m *RecordDeliveryResponse) String() string            { return proto.Compa
 func (*RecordDeliveryResponse) ProtoMessage()               {}
 func (*RecordDeliveryResponse) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{5} }
 
+type ClearDeliveryRequest struct {
+	// The date this delivery is for in YYYYMMDD.
+	Date string `protobuf:"bytes,1,opt,name=date" json:"date,omitempty"`
+}
+
+func (m *ClearDeliveryRequest) Reset()                    { *m = ClearDeliveryRequest{} }
+func (m *ClearDeliveryRequest) String() string            { return proto.CompactTextString(m) }
+func (*ClearDeliveryRequest) ProtoMessage()               {}
+func (*ClearDeliveryRequest) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{6} }
+
+func (m *ClearDeliveryRequest) GetDate() string {
+	if m != nil {
+		return m.Date
+	}
+	return ""
+}
+
+type ClearDeliveryResponse struct {
+}
+
+func (m *ClearDeliveryResponse) Reset()                    { *m = ClearDeliveryResponse{} }
+func (m *ClearDeliveryResponse) String() string            { return proto.CompactTextString(m) }
+func (*ClearDeliveryResponse) ProtoMessage()               {}
+func (*ClearDeliveryResponse) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{7} }
+
 func init() {
 	proto.RegisterType((*LocalTime)(nil), "api.LocalTime")
 	proto.RegisterType((*Delivery)(nil), "api.Delivery")
@@ -151,6 +178,8 @@ func init() {
 	proto.RegisterType((*FetchAllResponse)(nil), "api.FetchAllResponse")
 	proto.RegisterType((*RecordDeliveryRequest)(nil), "api.RecordDeliveryRequest")
 	proto.RegisterType((*RecordDeliveryResponse)(nil), "api.RecordDeliveryResponse")
+	proto.RegisterType((*ClearDeliveryRequest)(nil), "api.ClearDeliveryRequest")
+	proto.RegisterType((*ClearDeliveryResponse)(nil), "api.ClearDeliveryResponse")
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -166,6 +195,7 @@ const _ = grpc.SupportPackageIsVersion4
 type ApiServiceClient interface {
 	FetchAll(ctx context.Context, in *FetchAllRequest, opts ...grpc.CallOption) (*FetchAllResponse, error)
 	RecordDelivery(ctx context.Context, in *RecordDeliveryRequest, opts ...grpc.CallOption) (*RecordDeliveryResponse, error)
+	ClearDelivery(ctx context.Context, in *ClearDeliveryRequest, opts ...grpc.CallOption) (*ClearDeliveryResponse, error)
 }
 
 type apiServiceClient struct {
@@ -194,11 +224,21 @@ func (c *apiServiceClient) RecordDelivery(ctx context.Context, in *RecordDeliver
 	return out, nil
 }
 
+func (c *apiServiceClient) ClearDelivery(ctx context.Context, in *ClearDeliveryRequest, opts ...grpc.CallOption) (*ClearDeliveryResponse, error) {
+	out := new(ClearDeliveryResponse)
+	err := grpc.Invoke(ctx, "/api.ApiService/ClearDelivery", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // Server API for ApiService service
 
 type ApiServiceServer interface {
 	FetchAll(context.Context, *FetchAllRequest) (*FetchAllResponse, error)
 	RecordDelivery(context.Context, *RecordDeliveryRequest) (*RecordDeliveryResponse, error)
+	ClearDelivery(context.Context, *ClearDeliveryRequest) (*ClearDeliveryResponse, error)
 }
 
 func RegisterApiServiceServer(s *grpc.Server, srv ApiServiceServer) {
@@ -241,6 +281,24 @@ func _ApiService_RecordDelivery_Handler(srv interface{}, ctx context.Context, de
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ApiService_ClearDelivery_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ClearDeliveryRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ApiServiceServer).ClearDelivery(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api.ApiService/ClearDelivery",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ApiServiceServer).ClearDelivery(ctx, req.(*ClearDeliveryRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _ApiService_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "api.ApiService",
 	HandlerType: (*ApiServiceServer)(nil),
@@ -253,6 +311,10 @@ var _ApiService_serviceDesc = grpc.ServiceDesc{
 			MethodName: "RecordDelivery",
 			Handler:    _ApiService_RecordDelivery_Handler,
 		},
+		{
+			MethodName: "ClearDelivery",
+			Handler:    _ApiService_ClearDelivery_Handler,
+		},
 	},
 	Streams:  []grpc.StreamDesc{},
 	Metadata: "api.proto",
@@ -261,26 +323,29 @@ var _ApiService_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("api.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 330 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x92, 0xd1, 0x4a, 0x3a, 0x41,
-	0x14, 0xc6, 0x59, 0xf5, 0x2f, 0x7a, 0x44, 0xfd, 0x37, 0xa4, 0x2c, 0x5b, 0x17, 0x32, 0x57, 0x16,
-	0xe4, 0x92, 0xdd, 0x05, 0x5d, 0x28, 0xd1, 0x55, 0x14, 0x6c, 0x3d, 0x40, 0xd3, 0xee, 0x49, 0x07,
-	0xc6, 0x99, 0x69, 0x76, 0x14, 0xba, 0xed, 0x15, 0x7a, 0x9f, 0x5e, 0xa2, 0x57, 0xe8, 0x41, 0x62,
-	0x67, 0xd4, 0x70, 0x91, 0xee, 0xe6, 0x7c, 0xdf, 0xd9, 0xdf, 0xf7, 0x1d, 0x58, 0x68, 0x32, 0xcd,
-	0x47, 0xda, 0x28, 0xab, 0x48, 0x95, 0x69, 0x1e, 0x1d, 0xcf, 0x94, 0x9a, 0x09, 0x8c, 0x99, 0xe6,
-	0x31, 0x93, 0x52, 0x59, 0x66, 0xb9, 0x92, 0xb9, 0x5f, 0xa1, 0xf7, 0xd0, 0xbc, 0x55, 0x29, 0x13,
-	0x8f, 0x7c, 0x81, 0x84, 0x40, 0x6d, 0xae, 0x96, 0x26, 0x0c, 0x06, 0xc1, 0xf0, 0x5f, 0xe2, 0xde,
-	0xa4, 0x0f, 0xf5, 0x05, 0x97, 0x4b, 0x8b, 0x61, 0xc5, 0xa9, 0xeb, 0xa9, 0xd0, 0x73, 0x4c, 0x95,
-	0xcc, 0xc2, 0xaa, 0xd7, 0xfd, 0x44, 0xa7, 0xd0, 0xb8, 0x46, 0xc1, 0x57, 0x68, 0xde, 0x0a, 0x5e,
-	0xc6, 0x2c, 0x3a, 0x5e, 0x33, 0x71, 0x6f, 0x42, 0xa1, 0x66, 0xf9, 0xc2, 0xd3, 0x5a, 0xe3, 0xce,
-	0xa8, 0x68, 0xbb, 0x6d, 0x90, 0x38, 0x8f, 0x1e, 0x40, 0xf7, 0x06, 0x6d, 0x3a, 0x9f, 0x08, 0x91,
-	0xe0, 0xeb, 0x12, 0x73, 0x4b, 0xaf, 0xe0, 0xff, 0xaf, 0x94, 0x6b, 0x25, 0x73, 0x24, 0x27, 0xd0,
-	0xc8, 0xd6, 0x51, 0x61, 0x30, 0xa8, 0x0e, 0x5b, 0xe3, 0xb6, 0xc3, 0x6d, 0xf2, 0x93, 0xad, 0x4d,
-	0xa7, 0xd0, 0x4b, 0x30, 0x55, 0x26, 0xdb, 0x7a, 0x9e, 0x5b, 0x62, 0x04, 0x7f, 0x31, 0x42, 0xe8,
-	0x97, 0x19, 0xbe, 0xc8, 0xf8, 0x33, 0x00, 0x98, 0x68, 0xfe, 0x80, 0x66, 0xc5, 0x53, 0x24, 0x77,
-	0xd0, 0xd8, 0x74, 0x25, 0x87, 0x8e, 0x56, 0xba, 0x26, 0xea, 0x95, 0x54, 0xcf, 0xa1, 0xbd, 0xf7,
-	0xaf, 0xef, 0x8f, 0x4a, 0x97, 0xb4, 0xe3, 0xd5, 0x79, 0xfc, 0x52, 0xb8, 0x67, 0x4c, 0x08, 0xf2,
-	0x04, 0x9d, 0xdd, 0x60, 0x12, 0xb9, 0xef, 0xf7, 0x5e, 0x14, 0x1d, 0xed, 0xf5, 0x76, 0x13, 0x28,
-	0x14, 0x09, 0xc6, 0xed, 0x5c, 0x06, 0xa7, 0xcf, 0x75, 0xf7, 0x33, 0x5c, 0xfc, 0x04, 0x00, 0x00,
-	0xff, 0xff, 0x7a, 0xcc, 0x97, 0x6d, 0x3c, 0x02, 0x00, 0x00,
+	// 374 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x92, 0xc1, 0x4e, 0xc2, 0x40,
+	0x10, 0x86, 0x53, 0x40, 0x42, 0x87, 0x00, 0xba, 0xa1, 0x58, 0xab, 0x07, 0xb2, 0x27, 0x24, 0x91,
+	0x46, 0xbc, 0x91, 0x78, 0x00, 0x8d, 0x27, 0xa3, 0x49, 0xf5, 0xe8, 0xc1, 0xb5, 0x1d, 0x61, 0x93,
+	0xa5, 0x5b, 0xdb, 0x85, 0xc4, 0xab, 0xaf, 0xe0, 0xd5, 0xb7, 0xf2, 0x15, 0x7c, 0x10, 0xd3, 0x6d,
+	0xc1, 0xd0, 0x34, 0xde, 0x76, 0xfe, 0x7f, 0xfa, 0xcd, 0x3f, 0x93, 0x82, 0xc9, 0x22, 0x3e, 0x8a,
+	0x62, 0xa9, 0x24, 0xa9, 0xb2, 0x88, 0x3b, 0x27, 0x73, 0x29, 0xe7, 0x02, 0x5d, 0x16, 0x71, 0x97,
+	0x85, 0xa1, 0x54, 0x4c, 0x71, 0x19, 0x26, 0x59, 0x0b, 0xbd, 0x07, 0xf3, 0x56, 0xfa, 0x4c, 0x3c,
+	0xf2, 0x25, 0x12, 0x02, 0xb5, 0x85, 0x5c, 0xc5, 0xb6, 0xd1, 0x37, 0x06, 0x7b, 0x9e, 0x7e, 0x93,
+	0x1e, 0xd4, 0x97, 0x3c, 0x5c, 0x29, 0xb4, 0x2b, 0x5a, 0xcd, 0xab, 0x54, 0x4f, 0xd0, 0x97, 0x61,
+	0x60, 0x57, 0x33, 0x3d, 0xab, 0xe8, 0x0c, 0x1a, 0xd7, 0x28, 0xf8, 0x1a, 0xe3, 0xf7, 0x94, 0x17,
+	0x30, 0x85, 0x9a, 0x67, 0x7a, 0xfa, 0x4d, 0x28, 0xd4, 0x14, 0x5f, 0x66, 0xb4, 0xe6, 0xb8, 0x3d,
+	0x4a, 0xd3, 0x6e, 0x13, 0x78, 0xda, 0xa3, 0x07, 0xd0, 0xb9, 0x41, 0xe5, 0x2f, 0xa6, 0x42, 0x78,
+	0xf8, 0xb6, 0xc2, 0x44, 0xd1, 0x4b, 0xd8, 0xff, 0x93, 0x92, 0x48, 0x86, 0x09, 0x92, 0x53, 0x68,
+	0x04, 0xf9, 0x28, 0xdb, 0xe8, 0x57, 0x07, 0xcd, 0x71, 0x4b, 0xe3, 0x36, 0xf3, 0xbd, 0xad, 0x4d,
+	0x67, 0x60, 0x79, 0xe8, 0xcb, 0x38, 0xd8, 0x7a, 0x19, 0xb7, 0xc0, 0x30, 0xfe, 0x63, 0xd8, 0xd0,
+	0x2b, 0x32, 0xb2, 0x20, 0x74, 0x08, 0xdd, 0x2b, 0x81, 0x2c, 0x2e, 0xc2, 0x4b, 0xf6, 0xa7, 0x87,
+	0x60, 0x15, 0x7a, 0x33, 0xc8, 0xf8, 0xab, 0x02, 0x30, 0x8d, 0xf8, 0x03, 0xc6, 0x6b, 0xee, 0x23,
+	0xb9, 0x83, 0xc6, 0x66, 0x61, 0xd2, 0xd5, 0x91, 0x0a, 0x27, 0x71, 0xac, 0x82, 0x9a, 0x87, 0xb1,
+	0x3e, 0xbe, 0x7f, 0x3e, 0x2b, 0x1d, 0xd2, 0x72, 0xd7, 0xe7, 0xee, 0x6b, 0xea, 0x9e, 0x31, 0x21,
+	0xc8, 0x33, 0xb4, 0x77, 0xd3, 0x13, 0x47, 0x7f, 0x5f, 0x7a, 0x16, 0xe7, 0xb8, 0xd4, 0xdb, 0x9d,
+	0x40, 0x21, 0x9d, 0x10, 0xeb, 0x9e, 0x89, 0x31, 0x24, 0x4f, 0xd0, 0xda, 0xd9, 0x8c, 0x1c, 0x69,
+	0x48, 0xd9, 0x65, 0x1c, 0xa7, 0xcc, 0xca, 0xf1, 0x5d, 0x8d, 0x6f, 0x53, 0x33, 0xc5, 0xfb, 0x69,
+	0xcb, 0xc4, 0x18, 0xbe, 0xd4, 0xf5, 0xff, 0x7a, 0xf1, 0x1b, 0x00, 0x00, 0xff, 0xff, 0xe0, 0x3f,
+	0x53, 0xcc, 0xdf, 0x02, 0x00, 0x00,
 }
